fix emoji picker not showing uo when RHS is expanded

--- a/sass/components/_emoticons.scss
+++ b/sass/components/_emoticons.scss
@@ -56,7 +56,7 @@
     position: absolute;
     height: 362px;
     width: 278px;
-    z-index: 8;
+    z-index: 10;
 }
 
 .emoji-picker__categories {
